// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb demo -- backbutton 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c2:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c1 {
  margin-right: 16px;
  padding: 0 5px;
}

.c5 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.c7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.c9 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c9,
.c9:hover,
.c9:visited,
.c9:link,
.c9:active {
  color: #6b798e;
}

.c6 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.c0 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c0:hover .c4 {
  color: #3555f6;
}

.c0:hover .c8,
.c0:hover .c8:hover,
.c0:hover .c8:visited,
.c0:hover .c8:link,
.c0:hover .c8:active {
  color: #3555f6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c2"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon c3"
        />
      </button>
      <span
        class="c4 c5"
      >
        <i
          class="uc-fe-icon icon__home c3"
        />
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c7"
      >
        <i
          class="uc-fe-icon icon__uhost c3"
        />
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <a
        class="c8 c9"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c7"
      >
        reload
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c10"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- breadcrumb 1`] = `
.c16 {
  vertical-align: baseline;
}

.c15 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c15:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c14 {
  margin-right: 16px;
  padding: 0 5px;
}

.c18 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.c20 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c23 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.c22 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c22,
.c22:hover,
.c22:visited,
.c22:link,
.c22:active {
  color: #6b798e;
}

.c19 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.c13 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c13:hover .c17 {
  color: #3555f6;
}

.c13:hover .c21,
.c13:hover .c21:hover,
.c13:hover .c21:visited,
.c13:hover .c21:link,
.c13:hover .c21:active {
  color: #3555f6;
}

.c24 .c17:hover,
.c24 .c21:hover {
  color: #3555f6;
}

.c25 .c17 {
  color: #3555f6;
}

.c25 .c21,
.c25 .c21:hover,
.c25 .c21:visited,
.c25 .c21:link,
.c25 .c21:active {
  color: #3555f6;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 > .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c12 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c11 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c11 > * {
  font-size: 12px;
}

.c11 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c11 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c11 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c11:hover .uc-fe-radio-icon-wrap,
.c11.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c11.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c11.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c11.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c11.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c11.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c9 {
  position: relative;
  margin-bottom: -8px;
}

.c9 .c10,
.c9 .sc-bxivhb {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c9 .c10:last-child,
.c9 .sc-bxivhb:last-child {
  margin-right: 0;
}

.c9 .c27 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c9 .c27:last-child {
  margin-right: 0;
}

.c9 .c28+.c28 {
  margin-left: -1px;
}

.c9 .c26 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c9 .c26:first-child {
  border-radius: 2px 0 0 2px;
}

.c9 .c26:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c8 {
  display: table;
  width: 100%;
}

.c7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c7.uc-fe-input-block {
  display: block;
}

.c7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c7 input,
.c7 input:hover,
.c7 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c7:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c7 input {
  line-height: 26px;
  height: 26px;
}

.c7 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        separator
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <span
          class="uc-fe-input c7"
        >
          <span
            class="c8"
          >
            <input
              value="/"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        styleType
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c9"
        >
          <span
            checked=""
            class="c10 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c11"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c12"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              block-hover
            </span>
          </span>
          <span
            class="c10 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c11"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c12"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              hover
            </span>
          </span>
          <span
            class="c10 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c11"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c12"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              active
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c13"
    >
      <button
        class="c14 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c15"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon c16"
        />
      </button>
      <span
        class="c17 c18"
      >
        <i
          class="uc-fe-icon icon__home c16"
        />
      </span>
      <span
        class="c19"
      >
        /
      </span>
      <span
        class="c17 c20"
      >
        <i
          class="uc-fe-icon icon__uhost c16"
        />
      </span>
      <span
        class="c19"
      >
        /
      </span>
      <a
        class="c21 c22"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="c19"
      >
        /
      </span>
      <span
        class="c17 c20"
      >
        reload
      </span>
      <span
        class="c19"
      >
        /
      </span>
      <span
        class="c17 c23"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- breadcrumb-separator 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c2:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c1 {
  margin-right: 16px;
  padding: 0 5px;
}

.c5 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.c7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.c9 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c9,
.c9:hover,
.c9:visited,
.c9:link,
.c9:active {
  color: #6b798e;
}

.c6 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.c0 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c0:hover .c4 {
  color: #3555f6;
}

.c0:hover .c8,
.c0:hover .c8:hover,
.c0:hover .c8:visited,
.c0:hover .c8:link,
.c0:hover .c8:active {
  color: #3555f6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c2"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon c3"
        />
      </button>
      <span
        class="c4 c5"
      >
        <i
          class="uc-fe-icon icon__home c3"
        />
      </span>
      <span
        class="c6"
      />
      <span
        class="c4 c7"
      >
        <i
          class="uc-fe-icon icon__uhost c3"
        />
      </span>
      <span
        class="c6"
      />
      <a
        class="c8 c9"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="c6"
      />
      <span
        class="c4 c7"
      >
        reload
      </span>
      <span
        class="c6"
      />
      <span
        class="c4 c10"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c2"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon c3"
        />
      </button>
      <span
        class="c4 c5"
      >
        <i
          class="uc-fe-icon icon__home c3"
        />
      </span>
      <span
        class="c6"
      >
        &gt;
      </span>
      <span
        class="c4 c7"
      >
        <i
          class="uc-fe-icon icon__uhost c3"
        />
      </span>
      <span
        class="c6"
      >
        &gt;
      </span>
      <a
        class="c8 c9"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="c6"
      >
        &gt;
      </span>
      <span
        class="c4 c7"
      >
        reload
      </span>
      <span
        class="c6"
      >
        &gt;
      </span>
      <span
        class="c4 c10"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c2"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon c3"
        />
      </button>
      <span
        class="c4 c5"
      >
        <i
          class="uc-fe-icon icon__home c3"
        />
      </span>
      <span
        class="c6"
      >
        &gt;&gt;
      </span>
      <span
        class="c4 c7"
      >
        <i
          class="uc-fe-icon icon__uhost c3"
        />
      </span>
      <span
        class="c6"
      >
        &gt;&gt;
      </span>
      <a
        class="c8 c9"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="c6"
      >
        &gt;&gt;
      </span>
      <span
        class="c4 c7"
      >
        reload
      </span>
      <span
        class="c6"
      >
        &gt;&gt;
      </span>
      <span
        class="c4 c10"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c2"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon c3"
        />
      </button>
      <span
        class="c4 c5"
      >
        <i
          class="uc-fe-icon icon__home c3"
        />
      </span>
      <span
        class="c6"
      >
        -&gt;
      </span>
      <span
        class="c4 c7"
      >
        <i
          class="uc-fe-icon icon__uhost c3"
        />
      </span>
      <span
        class="c6"
      >
        -&gt;
      </span>
      <a
        class="c8 c9"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="c6"
      >
        -&gt;
      </span>
      <span
        class="c4 c7"
      >
        reload
      </span>
      <span
        class="c6"
      >
        -&gt;
      </span>
      <span
        class="c4 c10"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c2"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon c3"
        />
      </button>
      <span
        class="c4 c5"
      >
        <i
          class="uc-fe-icon icon__home c3"
        />
      </span>
      <span
        class="c6"
      >
        <i
          class="uc-fe-icon icon__caret-right c3"
        />
      </span>
      <span
        class="c4 c7"
      >
        <i
          class="uc-fe-icon icon__uhost c3"
        />
      </span>
      <span
        class="c6"
      >
        <i
          class="uc-fe-icon icon__caret-right c3"
        />
      </span>
      <a
        class="c8 c9"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="c6"
      >
        <i
          class="uc-fe-icon icon__caret-right c3"
        />
      </span>
      <span
        class="c4 c7"
      >
        reload
      </span>
      <span
        class="c6"
      >
        <i
          class="uc-fe-icon icon__caret-right c3"
        />
      </span>
      <span
        class="c4 c10"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- breadcrumb-styleType 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c2:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c1 {
  margin-right: 16px;
  padding: 0 5px;
}

.c5 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.c7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.c9 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c9,
.c9:hover,
.c9:visited,
.c9:link,
.c9:active {
  color: #6b798e;
}

.c6 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.c0 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c0:hover .c4 {
  color: #3555f6;
}

.c0:hover .c8,
.c0:hover .c8:hover,
.c0:hover .c8:visited,
.c0:hover .c8:link,
.c0:hover .c8:active {
  color: #3555f6;
}

.c11 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c11 .c4:hover,
.c11 .c8:hover {
  color: #3555f6;
}

.c12 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c12 .c4 {
  color: #3555f6;
}

.c12 .c8,
.c12 .c8:hover,
.c12 .c8:visited,
.c12 .c8:link,
.c12 .c8:active {
  color: #3555f6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c2"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon c3"
        />
      </button>
      <span
        class="c4 c5"
      >
        <i
          class="uc-fe-icon icon__home c3"
        />
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c7"
      >
        <i
          class="uc-fe-icon icon__uhost c3"
        />
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <a
        class="c8 c9"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c7"
      >
        reload
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c10"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c11"
    >
      <button
        class="c1 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c2"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon c3"
        />
      </button>
      <span
        class="c4 c5"
      >
        <i
          class="uc-fe-icon icon__home c3"
        />
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c7"
      >
        <i
          class="uc-fe-icon icon__uhost c3"
        />
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <a
        class="c8 c9"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c7"
      >
        reload
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c10"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c12"
    >
      <button
        class="c1 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c2"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon c3"
        />
      </button>
      <span
        class="c4 c5"
      >
        <i
          class="uc-fe-icon icon__home c3"
        />
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c7"
      >
        <i
          class="uc-fe-icon icon__uhost c3"
        />
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <a
        class="c8 c9"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c7"
      >
        reload
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c10"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item 1`] = `
.c20 {
  vertical-align: baseline;
}

.c19 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.c19:hover {
  color: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.c18 {
  margin-right: 16px;
  padding: 0 5px;
}

.c22 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c24 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.c23 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.c17 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c17:hover .c21 {
  color: #3555f6;
}

.c17:hover .c27,
.c17:hover .c27:hover,
.c17:hover .c27:visited,
.c17:hover .c27:link,
.c17:hover .c27:active {
  color: #3555f6;
}

.c25 .c21:hover,
.c25 .c27:hover {
  color: #3555f6;
}

.c26 .c21 {
  color: #3555f6;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 > .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c9 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c7 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c7:hover {
  border-color: #3357df;
}

.c7:hover .c13 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c7 .c13 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c7 .c15 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c7 .c8 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c7 .c10,
.c7 .c12 {
  line-height: 16px;
}

.c7 .c10 {
  padding-right: 20px;
}

.c7 .c12 {
  padding-left: 20px;
}

.c7 .c10 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        current
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        noAction
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c17"
    >
      <button
        class="c18 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c19"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon c20"
        />
      </button>
      <span
        class="c21 c22"
      >
        <i
          class="uc-fe-icon icon__home c20"
        />
      </span>
      <span
        class="c23"
      >
        /
      </span>
      <span
        class="c21 c22"
      >
        <i
          class="uc-fe-icon icon__uhost c20"
        />
      </span>
      <span
        class="c23"
      >
        /
      </span>
      <span
        class="c21 c22"
      >
        custom
      </span>
      <span
        class="c23"
      >
        /
      </span>
      <span
        class="c21 c24"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item-current 1`] = `
.c2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.c0 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c0:hover .c1 {
  color: #3555f6;
}

.c0:hover .c6,
.c0:hover .c6:hover,
.c0:hover .c6:visited,
.c0:hover .c6:link,
.c0:hover .c6:active {
  color: #3555f6;
}

.c4 .c1:hover,
.c4 .c6:hover {
  color: #3555f6;
}

.c5 .c1 {
  color: #3555f6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        Home
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c3"
      >
        Home
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item-disabled 1`] = `
.c2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #bbb !important;
}

.c0 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c0:hover .c1 {
  color: #3555f6;
}

.c0:hover .c6,
.c0:hover .c6:hover,
.c0:hover .c6:visited,
.c0:hover .c6:link,
.c0:hover .c6:active {
  color: #3555f6;
}

.c4 .c1:hover,
.c4 .c6:hover {
  color: #3555f6;
}

.c5 .c1 {
  color: #3555f6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        Home
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c3"
        disabled=""
      >
        Home
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item-noAction 1`] = `
.c3 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.c2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c0 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c0:hover .c1 {
  color: #3555f6;
}

.c0:hover .c6,
.c0:hover .c6:hover,
.c0:hover .c6:visited,
.c0:hover .c6:link,
.c0:hover .c6:active {
  color: #3555f6;
}

.c4 .c1:hover,
.c4 .c6:hover {
  color: #3555f6;
}

.c5 .c1 {
  color: #3555f6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        Home
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c3"
      >
        Home
      </span>
    </div>
  </div>
</div>
`;
